--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Talk about Tech and Biz
 ---
 
 <div id="home">
-  <h2 style="color: silver">Post List</h2>
+  <h2 style="color: silver">List Posts</h2>
   <ul class="posts">
     {% for post in site.posts %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
