fix a broken link

--- a/lab.html
+++ b/lab.html
@@ -10,7 +10,7 @@ categories: lab
 
   <ul class="listing">
     <li>
-      <a href="://github.com/swcool/swcool.github.io">
+      <a href="https://github.com/swcool/swcool.github.io">
         swcool.github.io The Open Source Code of this Web Site.
       </a>
      </li>
