update lab with lite project

--- a/lab.html
+++ b/lab.html
@@ -10,10 +10,15 @@ categories: lab
 
   <ul class="listing">
     <li>
+      <a href="https://github.com/swcool/lite">
+        Lite is a clean, light, and pretty way to build Jekyll web site!
+      </a>
+    </li>
+    <li>
       <a href="https://github.com/swcool/swcool.github.io">
         swcool.github.io The Open Source Code of this Web Site.
       </a>
-     </li>
+    </li>
     <li>
       <a href="https://chrome.google.com/webstore/detail/markview/iaddkimmopgchbbnmfmdcophmlnghkim">
         MarkView(New): View Markdown File in Chrome Browser
