--- a/lab.html
+++ b/lab.html
@@ -6,7 +6,7 @@ categories: lab
 
 <div id="home">
   <h2 style="color: silver">My Lab</h2>
-  <p>Love to build side projects in my free time. Here is a list some of them. Most of these listed are written in Ruby, Javascript, and Shell:
+  <p>Love to create something, build stuff. Here is a list some of them, those are written in Ruby, Javascript, and more:
 
   <ul class="listing">
     <li>
