--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ title:  About
   <h2 style="color: silver">About</h2>
 </div>
 <div>
-  <h2 id="2">Push Git, Markdown, Ruby around the world!</h2>
+  <h2 id="2">Git Push And Pull Around The World!</h2>
   <p>I am Shane Weng, a Software developer from Silicon Valley, California.</p>
   <h3 id="3">Authored Projects:</h3>
   <ul>
