--- a/lab.html
+++ b/lab.html
@@ -10,8 +10,18 @@ category: lab
 
   <ul class="listing">
     <li>
+      <a href="https://chrome.google.com/webstore/detail/markview/iaddkimmopgchbbnmfmdcophmlnghkim">
+        MarkView: Read and Write Awesome Markdown File through Browser
+      </a>
+    </li>
+    <li>
       <a href="https://github.com/swcool/lite">
         Lite is a clean, light, and pretty way to build Jekyll web site!
+      </a>
+    </li>
+    <li>
+      <a href="https://chrome.google.com/webstore/detail/easyread/ofigdgacnnooeiimjomeongmogcodedj">
+        EasyRead(new, in alpha testing): An Easy Reading Tool for Web Pages.
       </a>
     </li>
     <li>
@@ -20,18 +30,13 @@ category: lab
       </a>
     </li>
     <li>
-      <a href="https://chrome.google.com/webstore/detail/markview/iaddkimmopgchbbnmfmdcophmlnghkim">
-        MarkView(New): View Markdown File in Chrome Browser
-      </a>
-     </li>
-    <li>
       <a href="https://github.com/swcool/dotfiles">
         My Dotfiles - Using these Config Files and Customized Files to Setup the System
       </a>
     </li>
     <li>
       <a href="https://chrome.google.com/webstore/detail/markdown-viewer/ehnambpmkdhopilaccgfmojilolcglhn">
-        Markdown Viewer(Old): A Chrome Extension to View Markdown File
+        Markdown Viewer(deprecated): A Chrome Extension to View Markdown File
       </a>
      </li>
   </ul>
