--- a/lab.html
+++ b/lab.html
@@ -20,9 +20,10 @@ category: lab
       </a>
     </li>
     <li>
-      <a href="https://chrome.google.com/webstore/detail/easyread/ofigdgacnnooeiimjomeongmogcodedj">
         EasyRead(new, in alpha testing): An Easy Reading Tool for Web Pages.
-      </a>
+      <!-- a href="https://chrome.google.com/webstore/detail/easyread/ofigdgacnnooeiimjomeongmogcodedj">
+        EasyRead(new, in alpha testing): An Easy Reading Tool for Web Pages.
+      </ai-->
     </li>
     <li>
       <a href="https://github.com/swcool/swcool.github.io">
