--- a/lab.html
+++ b/lab.html
@@ -37,7 +37,7 @@ category: lab
     </li>
     <li>
       <a href="https://chrome.google.com/webstore/detail/markdown-viewer/ehnambpmkdhopilaccgfmojilolcglhn">
-        Markdown Viewer(deprecated): A Chrome Extension to View Markdown File
+        Markdown Viewer: A Chrome Extension to View Markdown File
       </a>
      </li>
   </ul>
